# vocal

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  INSTALL  README.md  com.github.VocalPodcastProject.vocal.json  com.github.needle-and-thread.vocal.gschema.xml  com.github.needleandthread.vocal.gschema.xml  meson.build  net.launchpad.vocal.gschema.xml  release_checklist.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
RPM/: vocal.spec
cmake/: GResource.cmake  Translations.cmake
data/: com.github.VocalPodcastProject.vocal.appdata.xml.in  com.github.VocalPodcastProject.vocal.desktop.in  com.github.VocalPodcastProject.vocal.gschema.xml  com.github.needle-and-thread.vocal.appdata.xml  com.github.needle-and-thread.vocal.appdata.xml.in  com.github.needle-and-thread.vocal.desktop  com.github.needle-and-thread.vocal.desktop.in.in  com.github.needle-and-thread.vocal.gresource.xml  com.github.needleandthread.vocal.appdata.xml  com.github.needleandthread.vocal.appdata.xml.in  com.github.needleandthread.vocal.desktop  com.github.needleandthread.vocal.desktop.in  com.github.needleandthread.vocal.gresource.xml  com.github.needleandthread.vocal.gschema.xml  meson.build  vocal.desktop  vocal.desktop.appdata.xml
data/icons/: meson.build
debian/: changelog  control  copyright
po/: CMakeLists.txt  LINGUAS  POTFILES  aa.po  ab.po  af.po  ak.po  am.po  an.po  ar.po  ar_AA.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cy.po  da.po  da_DK.po  de.po  de_DE.po  dv.po  el.po  el_GR.po  (+130 more)
po/extra/: extra.pot
snap/: snapcraft.yaml
src/: Application.vala  Controller.vala  Library.vala  Main.vala  MainWindow.vala  Vocal.vala  VocalSettings.vala  config.vala  config.vala.cmake  config.vala.in  meson.build  vocal.gresource.xml
src/Objects/: DirectoryEntry.vala  Episode.vala  Podcast.vala
src/Services/: ImageCache.vala
src/Utils/: FeedParser.vala  MPRIS.vala  PasswordManager.vala  Player.vala  SoupClient.vala  Utils.vala  XmlUtils.vala  gpodderClient.vala  iTunesProvider.vala
src/Widgets/: AddFeedDialog.vala  AllPodcastView.vala  ArtworkPopover.vala  CloudLoginDialog.vala  CoverArt.vala  DirectoryArt.vala  DirectoryView.vala  DonateDialog.vala  DownloadDetailBox.vala  DownloadsPopover.vala  EpisodeDetailBox.vala  ImportView.vala  InternetArchiveUploadDialog.vala  NewEpisodesView.vala  PlaybackBox.vala  PodcastDetailView.vala  PodcastView.vala  QueueBox.vala  QueuePopover.vala  QueueRow.vala  SearchResultBox.vala  SearchResultsPopover.vala  SearchResultsView.vala  SecretEntryPopover.vala  SettingsDialog.vala  ShowNotesPopover.vala  Shownotes.vala  Sidepane.vala  SyncDialog.vala  Toolbar.vala  VideoControls.vala  VideoView.vala  WelcomeScreen.vala  WelcomeView.vala
tests/: CMakeLists.txt  TestCase.vala  TestPodcast.vala  meson.build  test_main.vala
vapi/: webkit2gtk-3.0.deps  webkit2gtk-3.0.vapi
