# install_data(
#     'com.github.needleandthread.vocal.gschema.xml',
#     install_dir: get_option('datadir') / 'metainfo',
#     rename: meson.project_name() + '.gschema.xml',
# )

install_data(
    'com.github.needleandthread.vocal.gschema.xml',
    install_dir: get_option('datadir') / 'glib-2.0' / 'schemas',
    rename: meson.project_name() + '.gschema.xml',
)